Corrected the check box image

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div id="listGroup">
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage1" src="./image/checkBox.png" alt="Tag">
+					<img class="listCheck" id="listImage1" src="./image/checkItOut.png" alt="Tag">
 				</div>
 				<p class="listSentence" id="listSentence1">I can create a single or a multiple page website.</p>
 			</div>
@@ -61,19 +61,19 @@
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage3" src=	"./image/checkBox.png" alt="Tag">
+					<img class="listCheck" id="listImage3" src=	"./image/checkItOut.png" alt="Tag">
 				</div>
 				<p class="listSentence" id="listSentence3">If you need a database for your site, I can provide that.</p>
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage4" src="./image/checkBox.png" alt="Tag">
+					<img class="listCheck" id="listImage4" src="./image/checkItOut.png" alt="Tag">
 				</div>
 				<p class="listSentence" id="listSentence4">I will give you and your idea my undivided attention.</p>
 			</div>			
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage5" src="./image/checkBox.png" alt="Tag">
+					<img class="listCheck" id="listImage5" src="./image/checkItOut.png" alt="Tag">
 				</div>
 				<p class="listSentence" id="listSentence5">How about just talking over your idea to develop a plan.  We can start small and add to it as we go.</p>
 			</div>
