Corrected some CSS and titles in html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<div id="checklist">
-		<div id="listTextIntro">Let's run down a checklist full of ideas that can help <strong>your idea</strong> be more successful.</div>
+		<div id="listTextIntro">Run down this checklist full of suggestions that can help <strong>your idea</strong> be more successful.</div>
 		<div id="listGroup">
 			<div class="listItem">
 				<div class="checkImage">
@@ -181,7 +181,7 @@
 			<p class="contactSpec">David Mollert</p>	
 			<p class="contactSpec">DMollert&#64;gmail.com</p>
 			<p class="contactSpec" id="contactResume">If you're interested . . . here's my <a href="./assets/mollert-resume.htm" target="_blank">formal resume.</a></p>
-		<div>
+		</div>
 	</div>
 
 	<script src="javascriptIndex.js"></script>
