Worked on responsive-smart phones

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="topFrame">
 		<div id="topBackdrop">
 			<div id="headingText">
-				<span id="textBack">Let me do the heavy lifting.</span>
+				<p id="textBack">Let me do the heavy lifting.</p>
 			</div>
 			<div id="messageBox">
 				<p class="messageText">It's all about <strong>your</strong> idea!</p>
