--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 			viewBox="0 0 1000 200"
 			preserveAspectRatio="none"
 			width="100%" height="200">
-			<polygon points="0,0 700,175 1000,0 1000,200 0,200"
+			<polygon points="0,0 695,164 1000,0 1000,200 0,200"
 				fill="darkblue"/>
 		</svg>
 		<svg class="topFrameSvg" xmlns="http://www.w3.org/2000/svg"
-			viewBox="0 0 1000 162"
+			viewBox="0 0 1000 164"
 			preserveAspectRatio="none"
-			width="100%" height="162">
-			<polygon points="0,0 700,162 1000,0 1000,162 0,162"
+			width="100%" height="164">
+			<polygon points="0,0 700,164 1000,0 1000,164 0,164"
 				fill="white"/>
 		</svg>
 	</div>
@@ -82,20 +82,6 @@
 	</div>
 
 	<div id="sampleFrame">
-		<svg class="sampleFrameSvg" xmlns="http://www.w3.org/2000/svg"
-			viewBox="0 0 1000 168"
-			preserveAspectRatio="none"
-			width="100%" height="168">
-			<polygon points="0,0 1000,0 1000,168 700,0 0,168"
-				fill="white"/>
-		</svg>
-		<svg class="sampleFrameSvg" xmlns="http://www.w3.org/2000/svg"
-			viewBox="0 0 1000 200"
-			preserveAspectRatio="none"
-			width="100%" height="200">
-			<polygon points="24,200 700,34 976,200"
-				fill="rgba(176, 196, 222, 0.8)"/>
-		</svg>
 		<div id="sampleBackdrop">
 			<div id="displayText">HERE'S WHAT I'VE CREATED</div>
 			<div id="displayCase">
@@ -173,6 +159,20 @@
 				</div>
 			</div>
 		</div>
+		<svg class="sampleFrameSvg" xmlns="http://www.w3.org/2000/svg"
+			viewBox="0 0 1000 200"
+			preserveAspectRatio="none"
+			width="100%" height="200">
+			<polygon points="0,0 1000,0 1000,200 695,36 0,200"
+				fill="darkblue"/>
+		</svg>
+		<svg class="sampleFrameSvg" xmlns="http://www.w3.org/2000/svg"
+			viewBox="0 0 1000 164"
+			preserveAspectRatio="none"
+			width="100%" height="164">
+			<polygon points="0,0 1000,0 1000,164 700,0 0,164"
+				fill="white"/>
+		</svg>
 	</div>
 
 	<div id="inClosing">
