Re-arranged folders

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<title>Heavy Lifting</title>
-	
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">	
 	<meta name="description" content="David Mollert can build a website for you.  He is based in Charlotte, NC.">
+	<meta name="keywords" content="website">	
 
 	<link rel="icon" type="image/png" href="./assets/thumbUpFavicon.png" sizes="32x32" />
 
-	<link rel="stylesheet" type="text/css" href="cssIndex.css">
-	<link rel="stylesheet" type="text/css" href="cssChecklist.css">
-	<link rel="stylesheet" type="text/css" href="cssSampleFrame.css">
-	<link rel="stylesheet" type="text/css" href="cssInClosing.css">	
+	<link rel="stylesheet" type="text/css" href="css/cssIndex.css">
+	<link rel="stylesheet" type="text/css" href="css/cssChecklist.css">
+	<link rel="stylesheet" type="text/css" href="css/cssSampleFrame.css">
+	<link rel="stylesheet" type="text/css" href="css/cssInClosing.css">	
 	
 </head>
 <body>
@@ -199,8 +200,8 @@
 		</div>
 	</div>
 
-	<script src="javascriptIndex.js"></script>
-	<script src="javascriptDateTime.js"></script>
+	<script src="javascript/jsIndex.js"></script>
+	<script src="javascript/jsDateTime.js"></script>
 
 </body>
 </html>
