--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
 				<p class="messageText">Let me help with moving your idea to a larger stage.</p>
 			</div>
 		</div>
-		<svg class="topFrameSvg" xmlns="http://www.w3.org/2000/svg"
+		<svg class="topFrameSvg" id="bTopV" xmlns="http://www.w3.org/2000/svg"
 			viewBox="0 0 1000 200"
 			preserveAspectRatio="none"
 			width="100%" height="200">
-			<polygon points="0,0 695,164 1000,0 1000,200 0,200"
+			<polygon id="bTopP" points="0,0 695,164 1000,0 1000,200 0,200"
 				fill="darkblue"/>
 		</svg>
-		<svg class="topFrameSvg" xmlns="http://www.w3.org/2000/svg"
+		<svg class="topFrameSvg" id="wTopV" xmlns="http://www.w3.org/2000/svg"
 			viewBox="0 0 1000 164"
 			preserveAspectRatio="none"
 			width="100%" height="164">
-			<polygon points="0,0 700,164 1000,0 1000,164 0,164"
+			<polygon id="wTopP" points="0,0 700,164 1000,0 1000,164 0,164"
 				fill="white"/>
 		</svg>
 	</div>
@@ -160,18 +160,18 @@
 				</div>
 			</div>
 		</div>
-		<svg class="sampleFrameSvg" xmlns="http://www.w3.org/2000/svg"
+		<svg class="sampleFrameSvg" id="bBottomV" xmlns="http://www.w3.org/2000/svg"
 			viewBox="0 0 1000 200"
 			preserveAspectRatio="none"
 			width="100%" height="200">
-			<polygon points="0,0 1000,0 1000,200 695,36 0,200"
+			<polygon id="bBottomP" points="0,0 1000,0 1000,200 695,36 0,200"
 				fill="darkblue"/>
 		</svg>
-		<svg class="sampleFrameSvg" xmlns="http://www.w3.org/2000/svg"
+		<svg class="sampleFrameSvg" id="wBottomV" xmlns="http://www.w3.org/2000/svg"
 			viewBox="0 0 1000 164"
 			preserveAspectRatio="none"
 			width="100%" height="164">
-			<polygon points="0,0 1000,0 1000,164 700,0 0,164"
+			<polygon id="wBottomP" points="0,0 1000,0 1000,164 700,0 0,164"
 				fill="white"/>
 		</svg>
 	</div>
@@ -201,6 +201,7 @@
 	</div>
 
 	<script src="javascript/jsIndex.js"></script>
+	<script src="javascript/jsVeeWidth.js"></script>
 	<script src="javascript/jsDateTime.js"></script>
 
 </body>
