Added record-vitals and removed Sampler from examples

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/sampler.png" alt="Display Image"/>
-							<p class="sampleLabel">A Fun Site</p>		
+							<img src="./image/vitals.png" alt="Display Image"/>
+							<p class="sampleLabel">A Chart Site</p>		
 						</div>
 						<div class="cardBack">
-							<p>This site has a multiple of user items on it.  From math calculations to add/subtract from a list to changing of an audible image.  Something may peak your curiosity.</p>
-							<p><a href="https://mollert.github.io/Sampler/" target="_blank">Link to my site</a></p>
+							<p>You can enter your vitals, blood pressure, heart rate and weight.  Then you can chart your reading for different lengths of time.  Give the link a minute.</p>
+							<p><a href="https://record-vitals.herokuapp.com" target="_blank">Link to my site</a></p>
 						</div>
 					</div>
 				</div>
