Updated for SEO

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>Heavy Lifting</title>
+	<title>Website designer who will build, deploy your website.</title>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge, chrome=1">	
-	<meta name="description" content="David Mollert can build a website for you.  He is based in Charlotte, NC.">
-	<meta name="keywords" content="website">	
+	<meta name="description" content="Will create or collaborate to build a mobile ready website suited to fit you. Acquire a domain name and deploy the site if needed. Based in Charlotte, NC." />
+	
 
 	<link rel="icon" type="image/png" href="./assets/thumbUpFavicon.png" sizes="32x32" />
 
@@ -51,31 +51,31 @@
 		<div id="listGroup">
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage1" src="./image/checkItOut.png" alt="Tag">
+					<img class="listCheck" id="listImage1" src="./image/checkItOut.png" alt="A checked box">
 				</div>
 				<p class="listSentence" id="listSentence1">I can create a single or a multiple page website.</p>
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage2" src="./image/checkItOut.png" alt="Tag">
+					<img class="listCheck" id="listImage2" src="./image/checkItOut.png" alt="A checked box">
 				</div>
 				<p class="listSentence" id="listSentence2">I can help pick a domain name and deploy your site to the internet.</p>
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage3" src=	"./image/checkItOut.png" alt="Tag">
+					<img class="listCheck" id="listImage3" src=	"./image/checkItOut.png" alt="A checked box">
 				</div>
 				<p class="listSentence" id="listSentence3">If you need a database for your site, I can provide that.</p>
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage4" src="./image/checkItOut.png" alt="Tag">
+					<img class="listCheck" id="listImage4" src="./image/checkItOut.png" alt="A checked box">
 				</div>
 				<p class="listSentence" id="listSentence4">I will give you and your idea my undivided attention.</p>
 			</div>			
 			<div class="listItem">
 				<div class="checkImage">
-					<img class="listCheck" id="listImage5" src="./image/checkItOut.png" alt="Tag">
+					<img class="listCheck" id="listImage5" src="./image/checkItOut.png" alt="A checked box">
 				</div>
 				<p class="listSentence" id="listSentence5">How about just talking over your idea to develop a plan.  We can start small and add to it as we go.</p>
 			</div>
@@ -89,7 +89,7 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/farmers.png" alt="Display Image"/>
+							<img src="./image/farmers.png" alt="Front page of my farmers market site"/>
 							<p class="sampleLabel">A Farmers Market Site</p>
 						</div>
 						<div class="cardBack">		
@@ -101,7 +101,7 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/bakery.png" alt="Display Image"/>
+							<img src="./image/bakery.png" alt="Front page of my bakery site"/>
 							<p class="sampleLabel">A Bakery Site</p>		
 						</div>
 						<div class="cardBack">
@@ -113,7 +113,7 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/resume.png" alt="Display Image"/>
+							<img src="./image/resume.png" alt="Front page of my resume site"/>
 							<p class="sampleLabel">My Resume Site</p>		
 						</div>
 						<div class="cardBack">
@@ -125,7 +125,7 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/jewelry.png" alt="Display Image"/>
+							<img src="./image/jewelry.png" alt="Front page of my jewelry site"/>
 							<p class="sampleLabel">A Jewelry Site</p>
 						</div>
 						<div class="cardBack">		
@@ -137,7 +137,7 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/vitals.png" alt="Display Image"/>
+							<img src="./image/vitals.png" alt="Front page of my site which records your vitals"/>
 							<p class="sampleLabel">A Chart Site</p>		
 						</div>
 						<div class="cardBack">
@@ -149,7 +149,7 @@
 				<div class="aCard">		
 					<div class="frontBack">
 						<div class="cardFront">
-							<img src="./image/robot.png" alt="Display Image"/>
+							<img src="./image/robot.png" alt="Front page of my robot sizing site"/>
 							<p class="sampleLabel">A Robot Sizing Site</p>		
 						</div>
 						<div class="cardBack">
