Added Structured Data

--- a/index.html
+++ b/index.html
@@ -9,6 +9,61 @@
 
 	<meta name="description" content="Will create or collaborate to build a mobile ready website suited to fit you. Acquire a domain name and deploy the site if needed. Based in Charlotte, NC." />
 	
+	<script type="application/ld+json">
+	{
+		"@context": "http://schema.org",
+		"@type": "Website",
+		"url": "http://dmollert.com",
+		"audience": {
+			"@type": "Audience",
+			"audienceType": "Someone with an idea"
+		},
+		"character": {
+			"@type": "Person",
+			"additionalName": "Sherpa"
+		},
+		"contributor": {
+			"@type": "Person",
+			"additionalName": "You the customer"
+		},
+		"creator": {
+			"@type": "Person",
+			"name": "David Mollert",
+			"homeLocation": {
+				"@type": "Place",
+				"address": {
+					"@type": "PostalAddress",
+					"addressLocality": "Charlotte",
+					"addressRegion": "North Carolina",
+					"addressCountry": "US"
+				}
+			},
+			"knowsAbout": "Website Development and Deployment",
+			"image": "http://dmollert.com/image/mollert-pick.png"
+		},
+		"exampleOfWork": [
+			{
+				"@type": "CreativeWork",
+				"description": "A Farmers Market Site",
+				"image": "http://dmollert.com/image/farmers.png"
+			},
+			{
+				"@type": "CreativeWork",
+				"description": "A Bakery Site",
+				"image": "http://dmollert.com/image/bakery.png"
+			},
+			{
+				"@type": "CreativeWork",
+				"description": "A Chart Site",
+				"image": "http://dmollert.com/image/vitals.png"
+			}
+		],
+		"isBasedOn": {
+			"@type": "CreativeWork",
+			"about": "customers idea"
+		}
+	}
+	</script>
 
 	<link rel="icon" type="image/png" href="./assets/thumbUpFavicon.png" sizes="32x32" />
 
