Updated for search

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />	
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-	<title>Website designer who will build, deploy your website.</title>
+	<title>Website designer who will create and deploy your website.</title>
 
-	<meta name="description" content="Will create or collaborate to build a mobile ready website suited to fit you. Acquire a domain name and deploy the site if needed. Based in Charlotte, NC." />
+	<meta name="description" content="Will create or collaborate to build a mobile ready website suited to fit you. Acquire a domain name and deploy the website if needed. Based in Charlotte, NC." />
 	
 	<script type="application/ld+json">
 	{
@@ -82,7 +82,9 @@
 			</div>
 			<div id="messageBox">
 				<p class="messageText">It's all about <strong>your</strong> idea!</p>
-				<p class="messageText">Let me help with moving your idea to a larger stage.</p>
+				<p class="messageText">Creating a </p>
+				<h1 class="messageText">website</h1>
+				<p class="messageText"> would help move your idea to a larger stage.</p>				
 			</div>
 		</div>
 		<svg class="topFrameSvg" id="bTopV" xmlns="http://www.w3.org/2000/svg"
@@ -114,13 +116,13 @@
 				<div class="checkImage">
 					<img class="listCheck" id="listImage2" src="./image/checkItOut.png" alt="A checked box">
 				</div>
-				<p class="listSentence" id="listSentence2">I can help pick a domain name and deploy your site to the internet.</p>
+				<p class="listSentence" id="listSentence2">I can help pick a domain name and deploy your website to the internet.</p>
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
 					<img class="listCheck" id="listImage3" src=	"./image/checkItOut.png" alt="A checked box">
 				</div>
-				<p class="listSentence" id="listSentence3">If you need a database for your site, I can provide that.</p>
+				<p class="listSentence" id="listSentence3">If you need a database for your website, I can provide that.</p>
 			</div>
 			<div class="listItem">
 				<div class="checkImage">
@@ -145,11 +147,11 @@
 					<div class="frontBack">
 						<div class="cardFront">
 							<img src="./image/farmers.png" alt="Front page of my farmers market site"/>
-							<p class="sampleLabel">A Farmers Market Site</p>
+							<p class="sampleLabel">A Farmers Market Website</p>
 						</div>
 						<div class="cardBack">		
-							<p>This is a multi-page site for a local farmers market.  On the list page, once signed in you can add to or delete from your shopping list.  You can choose from the list of products offered.  Use Yancy and 345TTT for password.</p>
-							<p><a href="https://mollert.github.io/FarmersMarket/" target="_blank">Link to my site</a></p>
+							<p>A multi-page website for a local farmers market.  On the list page, once signed in you can add to or delete from your shopping list.  You can choose from the list of products offered.  Use Yancy and 345TTT for password.</p>
+							<p><a href="https://mollert.github.io/FarmersMarket/" target="_blank">Link to website</a></p>
 						</div>
 					</div>
 				</div>
@@ -157,11 +159,11 @@
 					<div class="frontBack">
 						<div class="cardFront">
 							<img src="./image/bakery.png" alt="Front page of my bakery site"/>
-							<p class="sampleLabel">A Bakery Site</p>		
+							<p class="sampleLabel">A Bakery Website</p>		
 						</div>
 						<div class="cardBack">
 							<p>You can create an account (or use henry@gmail.com hhh123 for password), then choose from the offerings which are tabulated once the "Go to cart" button is clicked.  A database would be used.  Give the link a minute.</p>
-							<p><a href="https://coolmama.herokuapp.com" target="_blank">Link to my site</a></p>
+							<p><a href="https://coolmama.herokuapp.com" target="_blank">Link to website</a></p>
 						</div>
 					</div>
 				</div>
@@ -169,11 +171,11 @@
 					<div class="frontBack">
 						<div class="cardFront">
 							<img src="./image/resume.png" alt="Front page of my resume site"/>
-							<p class="sampleLabel">My Resume Site</p>		
+							<p class="sampleLabel">My Resume Website</p>		
 						</div>
 						<div class="cardBack">
 							<p>This is one of my first sites but I still like the background and story flow.</p>		
-							<p><a href="https://mollert.github.io/HowDidIGetHere/" target="_blank">Link to my site</a></p>
+							<p><a href="https://mollert.github.io/HowDidIGetHere/" target="_blank">Link to website</a></p>
 						</div>
 					</div>
 				</div>
@@ -181,11 +183,11 @@
 					<div class="frontBack">
 						<div class="cardFront">
 							<img src="./image/jewelry.png" alt="Front page of my jewelry site"/>
-							<p class="sampleLabel">A Jewelry Site</p>
+							<p class="sampleLabel">A Jewelry Website</p>
 						</div>
 						<div class="cardBack">		
-							<p>This is a multi-page site for an artisan of custom jewelry.  The comment page could be connected to a database for storage.  Smart phone compatible.</p>
-							<p><a href="https://mollert.github.io/cJewelry/" target="_blank">Link to my site</a></p>
+							<p>This is a multi-page website for an artisan of custom jewelry.  The comment page could be connected to a database for storage.  Smart phone compatible.</p>
+							<p><a href="https://mollert.github.io/cJewelry/" target="_blank">Link to website</a></p>
 						</div>
 					</div>
 				</div>
@@ -193,11 +195,11 @@
 					<div class="frontBack">
 						<div class="cardFront">
 							<img src="./image/vitals.png" alt="Front page of my site which records your vitals"/>
-							<p class="sampleLabel">A Chart Site</p>		
+							<p class="sampleLabel">A Chart Website</p>		
 						</div>
 						<div class="cardBack">
 							<p>You can enter your vitals, blood pressure, heart rate and weight.  Then you can chart your reading for different lengths of time.  Give the link a minute.</p>
-							<p><a href="https://record-vitals.herokuapp.com" target="_blank">Link to my site</a></p>
+							<p><a href="https://record-vitals.herokuapp.com" target="_blank">Link to website</a></p>
 						</div>
 					</div>
 				</div>
@@ -205,11 +207,11 @@
 					<div class="frontBack">
 						<div class="cardFront">
 							<img src="./image/robot.png" alt="Front page of my robot sizing site"/>
-							<p class="sampleLabel">A Robot Sizing Site</p>		
+							<p class="sampleLabel">A Robot Sizing Website</p>		
 						</div>
 						<div class="cardBack">
-							<p>This site selects the correct model of robot from criteria that the user provides, in which they describe the payload of the application.  This draws from a mock database.  Give the link a minute.</p>
-							<p><a href="https://robot-sizing.herokuapp.com" target="_blank">Link to my site</a></p>
+							<p>This website selects the correct model of robot from criteria that the user provides, in which they describe the payload of the application.  This draws from a mock database.  Give the link a minute.</p>
+							<p><a href="https://robot-sizing.herokuapp.com" target="_blank">Link to website</a></p>
 						</div>
 					</div>
 				</div>
